# AI-Recommendation

./: Cargo.toml  app.py
src/: main.rs
