[package]
name = "AI_Thoughtmap"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3"
juniper = "0.15"
async-graphql = "5.0"
async-graphql-actix-web = "5.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
tokio = { version = "1.0", features = ["full"] }
